# job_hunter

./: .gitignore  README.md  __init__.py  chat.py  contact.py  detail.py  dialogue.py  interview.py  jobs.py  personal.py  pyproject.toml  requirements.txt  resume.py  search.py
_core/: __init__.py  browser.py  config.py  constants.py  human.py  logger.py  parsers.py
assets/: __init__.py  constants.py  logger.py  parsers.py  util.py
core/: __init__.py  base.py  browser.py  constants.py  logger.py  parsers.py  util.py
