[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "job_hunter"
version = "1.0.0"
description = "Boss直聘岗位抓取 SDK — 纯 API 模式，高速稳定"
requires-python = ">=3.11"
dependencies = ["DrissionPage>=4.0", "httpx>=0.27", "scrapling>=0.4"]

[project.optional-dependencies]
minimal = ["DrissionPage>=4.0", "httpx>=0.27"]

[tool.setuptools]
packages = ["job_hunter", "job_hunter._core"]
